--- a/agner.config
+++ b/agner.config
@@ -1,10 +1,8 @@
-{name, "[Package Name]"}.
-{authors, ["[Author Name] <[Author Email]>"]}.
-{description, "[Package Synopsis]"}.
-{homepage, "[Package Homepage]"}.
+{name, "gen_event_forwarder"}.
+{authors, ["Yurii Rashkovskii <yrashk@gmail.com>"]}.
+{description, "gen_event forwarder"}.
+{homepage, "https://github.com/yrashk/gen_event_forwarder"}.
 {rebar_compatible, true}.
-{license, "[Package License]", "[Optional Package License File]"}.
-{url, {git, "[Package Git URL]", [Package Git Ref]}}.  % Ref is either "[sha1]", or {tag, "[tag name]"} or {brach, "[BranchName]"}
-%% url also accepts {hg, "[Package Hg URL]", "[Package Hg Rev]"} 
-%%                  {svn, "[Package SVN URL]", "[Package SVN Rev]"}
-{applications, []}.
+{license, "WTFPL"}.
+{url, {git, "https://github.com/yrashk/gen_event_forwarder.git", {branch, "master"}}}.
+{applications, [gen_event_forwarder]}.
